fix(scheduler): add text-overflow to times-all-day th element

--- a/packages/default/scss/scheduler/_layout.scss
+++ b/packages/default/scss/scheduler/_layout.scss
@@ -364,6 +364,10 @@
             border-bottom-color: inherit;
         }
 
+        .k-scheduler-times-all-day {
+            text-overflow: ellipsis;
+        }
+
         .k-slot-cell.k-last-resource {
             border-right: 0;
         }
