fix: change default border radius in the default theme from 2 to 4 pixels
Based on designer revision, we slightly bumped border radii from 1, 2 and 4 pixels
to 2, 4 and 6 pixels respectively, to ensure there the step in size is noticeable.

--- a/packages/default/scss/utils/_border.scss
+++ b/packages/default/scss/utils/_border.scss
@@ -41,11 +41,11 @@
     ) !default;
 
     $utils-border-radius: (
-        default: map-get( $spacing, 1 ),
+        default: $border-radius-md,
         0: 0,
-        sm: ( map-get( $spacing, 1 ) / 4 ),
-        md: ( map-get( $spacing, 1 ) / 2 ),
-        lg: map-get( $spacing, 1 ),
+        sm: $border-radius-sm,
+        md: $border-radius-md,
+        lg: $border-radius-lg,
         full: 9999px
     ) !default;
 
