chore: fix lint warnings

--- a/packages/bootstrap/scss/notification/_variables.scss
+++ b/packages/bootstrap/scss/notification/_variables.scss
@@ -20,6 +20,7 @@ $notification-border: $component-border !default;
 @function notification-theme( $colors ) {
     $_theme: ();
 
+    // sass-lint:disable-block indentation
     @each $name, $color in $colors {
         $_theme: map-merge(( $name: (
             color: shade( $color, 6 ),
