feat: improve component options sizings as per desing

--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -11,7 +11,7 @@ $kendo-input-font-family: $font-family !default;
 $kendo-input-font-size: $font-size !default;
 $kendo-input-line-height: $input-line-height !default;
 
-$kendo-input-padding-x-sm: $input-padding-x-sm !default;
+$kendo-input-padding-x-sm: $input-padding-x !default;
 $kendo-input-padding-y-sm: $input-padding-y-sm !default;
 $kendo-input-font-size-sm: $font-size-md !default;
 $kendo-input-line-height-sm: $line-height-md !default;
@@ -21,7 +21,7 @@ $kendo-input-padding-y-md: $input-padding-y !default;
 $kendo-input-font-size-md: $font-size-md !default;
 $kendo-input-line-height-md: $line-height-md !default;
 
-$kendo-input-padding-x-lg: $input-padding-x-lg !default;
+$kendo-input-padding-x-lg: $input-padding-x !default;
 $kendo-input-padding-y-lg: $input-padding-y-lg !default;
 $kendo-input-font-size-lg: $font-size-md !default;
 $kendo-input-line-height-lg: $line-height-md !default;
