--- a/packages/bootstrap/scss/list/_variables.scss
+++ b/packages/bootstrap/scss/list/_variables.scss
@@ -3,7 +3,7 @@
 /// Font size of the list component, if no size is set.
 /// @group list
 $kendo-list-font-size: null !default;
-$kendo-list-font-size-sm: $font-size-sm !default;
+$kendo-list-font-size-sm: $font-size-md !default;
 $kendo-list-font-size-md: $font-size-md !default;
 $kendo-list-font-size-lg: $font-size-md !default;
 
