--- a/packages/bootstrap/scss/button/_variables.scss
+++ b/packages/bootstrap/scss/button/_variables.scss
@@ -11,9 +11,9 @@ $kendo-button-border-radius: null !default;
 /// Horizontal padding of the button.
 /// @group button
 $kendo-button-padding-x: $btn-padding-x !default;
-$kendo-button-padding-x-sm: $btn-padding-x-sm !default;
+$kendo-button-padding-x-sm: $btn-padding-x !default;
 $kendo-button-padding-x-md: $btn-padding-x !default;
-$kendo-button-padding-x-lg: $btn-padding-x-lg !default;
+$kendo-button-padding-x-lg: $btn-padding-x !default;
 
 /// Vertical padding of the button.
 /// @group button
@@ -29,9 +29,9 @@ $kendo-button-font-family: $font-family !default;
 /// Font sizes of the button.
 /// @group button
 $kendo-button-font-size: $btn-font-size !default;
-$kendo-button-font-size-sm: $btn-font-size-sm !default;
+$kendo-button-font-size-sm: $btn-font-size !default;
 $kendo-button-font-size-md: $btn-font-size !default;
-$kendo-button-font-size-lg: $btn-font-size-lg !default;
+$kendo-button-font-size-lg: $btn-font-size !default;
 
 /// Line heights used along with $font-size.
 /// @group button
@@ -48,8 +48,19 @@ $kendo-button-calc-size: calc( #{$kendo-button-line-height * 1em} + #{$kendo-but
 /// @group button
 $kendo-button-inner-calc-size: calc( #{$kendo-button-line-height * 1em} + #{$kendo-button-padding-y * 2} ) !default;
 
+/// Horizontal padding of the arrow button.
+/// @group button
 $kendo-button-arrow-padding-x: $kendo-button-padding-y !default;
+$kendo-button-arrow-padding-x-sm: $kendo-button-padding-y-sm !default;
+$kendo-button-arrow-padding-x-md: $kendo-button-padding-y-md !default;
+$kendo-button-arrow-padding-x-lg: $kendo-button-padding-y-lg !default;
+
+/// Vertical padding of the arrow button.
+/// @group button
 $kendo-button-arrow-padding-y: $kendo-button-padding-y !default;
+$kendo-button-arrow-padding-y-sm: $kendo-button-padding-y-sm !default;
+$kendo-button-arrow-padding-y-md: $kendo-button-padding-y-md !default;
+$kendo-button-arrow-padding-y-lg: $kendo-button-padding-y-lg !default;
 
 /// Theme colors map for the button.
 /// @group button
