--- a/packages/default/scss/button/_variables.scss
+++ b/packages/default/scss/button/_variables.scss
@@ -48,8 +48,19 @@ $kendo-button-calc-size: calc( #{$kendo-button-line-height * 1em} + #{$kendo-but
 /// @group button
 $kendo-button-inner-calc-size: calc( #{$kendo-button-line-height * 1em} + #{$kendo-button-padding-y * 2} ) !default;
 
+/// Horizontal padding of the arrow button.
+/// @group button
 $kendo-button-arrow-padding-x: $kendo-button-padding-y !default;
+$kendo-button-arrow-padding-x-sm: $kendo-button-padding-y-sm !default;
+$kendo-button-arrow-padding-x-md: $kendo-button-padding-y-md !default;
+$kendo-button-arrow-padding-x-lg: $kendo-button-padding-y-lg !default;
+
+/// Vertical padding of the arrow button.
+/// @group button
 $kendo-button-arrow-padding-y: $kendo-button-padding-y !default;
+$kendo-button-arrow-padding-y-sm: $kendo-button-padding-y-sm !default;
+$kendo-button-arrow-padding-y-md: $kendo-button-padding-y-md !default;
+$kendo-button-arrow-padding-y-lg: $kendo-button-padding-y-lg !default;
 
 /// Theme colors map for the button.
 /// @group button
