fix: change default border radius in bootstrap theme

--- a/packages/bootstrap/scss/_variables.scss
+++ b/packages/bootstrap/scss/_variables.scss
@@ -83,8 +83,9 @@ $padding-y-lg: $padding-y * 1.5 !default;
 
 /// Border radius for all components.
 $border-radius: $border-radius !default;
-$border-radius-sm: $border-radius-sm !default;
-$border-radius-lg: $border-radius-lg !default;
+$border-radius-sm: $border-radius / 2 !default;
+$border-radius-md: $border-radius !default;
+$border-radius-lg: $border-radius * 1.5 !default;
 
 $panel-padding-x: $card-spacer-x !default;
 $panel-padding-y: $card-spacer-y !default;
