--- a/packages/bootstrap/scss/utils/_border.scss
+++ b/packages/bootstrap/scss/utils/_border.scss
@@ -1,9 +1,9 @@
 $utils-border-radius: (
-    default: map-get( $spacing, 1 ),
+    default: $border-radius-md,
     0: 0,
-    sm: .2rem,
-    md: .25rem,
-    lg: .3rem,
+    sm: $border-radius-sm,
+    md: $border-radius-md,
+    lg: $border-radius-lg,
     full: 9999px
 ) !default;
 
