--- a/packages/bootstrap/scss/popup/_variables.scss
+++ b/packages/bootstrap/scss/popup/_variables.scss
@@ -2,7 +2,7 @@
 $popup-padding-x: null !default;
 $popup-padding-y: null !default;
 $popup-border-width: 1px !default;
-$popup-border-radius: $border-radius !default;
+$popup-border-radius: $kendo-border-radius-md !default;
 
 $popup-font-size: $font-size !default;
 $popup-line-height: $line-height !default;
