--- a/packages/bootstrap/scss/window/_variables.scss
+++ b/packages/bootstrap/scss/window/_variables.scss
@@ -1,6 +1,6 @@
 // Window
 $window-border-width: 1px !default;
-$window-border-radius: $border-radius !default;
+$window-border-radius: $kendo-border-radius-md !default;
 $window-font-family: $font-family !default;
 $window-font-size: $font-size !default;
 $window-line-height: $line-height !default;
