--- a/packages/classic/scss/notification/_variables.scss
+++ b/packages/classic/scss/notification/_variables.scss
@@ -2,7 +2,7 @@
 $notification-padding-x: 8px !default;
 $notification-padding-y: 4px !default;
 $notification-border-width: 1px !default;
-$notification-border-radius: $border-radius !default;
+$notification-border-radius: $kendo-border-radius-md !default;
 
 $notification-shadow: $popup-shadow !default;
 
