--- a/packages/default/scss/gantt/_layout.scss
+++ b/packages/default/scss/gantt/_layout.scss
@@ -506,7 +506,7 @@
     // Single task
     .k-single-wrap {}
     .k-task-single {
-        @include border-radius( $border-radius );
+        @include border-radius( $kendo-border-radius-md );
         border-width: $gantt-task-border-width;
         border-style: solid;
         box-sizing: border-box;
@@ -539,7 +539,7 @@
         }
     }
     .k-task-complete {
-        @include border-radius( $border-radius );
+        @include border-radius( $kendo-border-radius-md );
         width: 20%;
         position: absolute;
         z-index: 1;
