--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -17,7 +17,7 @@
 
     $grid-hierarchy-col-width: ($icon-size * 2) !default;
 
-    $grid-group-indicator-border-radius: $border-radius !default;
+    $grid-group-indicator-border-radius: $kendo-border-radius-md !default;
     $grid-group-indicator-gap: $table-cell-padding-y !default;
 
     $grid-grouping-row-border-top: 1px !default;
