--- a/packages/default/scss/slider/_theme.scss
+++ b/packages/default/scss/slider/_theme.scss
@@ -7,7 +7,7 @@
 
         .k-slider-track,
         .k-slider-selection {
-            @include border-radius( $border-radius );
+            @include border-radius( $kendo-border-radius );
         }
 
         .k-slider-track {
