--- a/packages/bootstrap/scss/_variables.scss
+++ b/packages/bootstrap/scss/_variables.scss
@@ -82,10 +82,10 @@ $padding-x-lg: $padding-x * 1.5 !default;
 $padding-y-lg: $padding-y * 1.5 !default;
 
 /// Border radius for all components.
-$border-radius: $border-radius !default;
-$border-radius-sm: $border-radius / 2 !default;
-$border-radius-md: $border-radius !default;
-$border-radius-lg: $border-radius * 1.5 !default;
+$kendo-border-radius: $border-radius !default;
+$kendo-border-radius-sm: $kendo-border-radius / 2 !default;
+$kendo-border-radius-md: $kendo-border-radius !default;
+$kendo-border-radius-lg: $kendo-border-radius * 1.5 !default;
 
 $panel-padding-x: $card-spacer-x !default;
 $panel-padding-y: $card-spacer-y !default;
@@ -379,7 +379,7 @@ $invalid-shadow: 0 0 0 .25rem rgba($invalid-border, .25) !default;
 $drag-clue-padding-x: $btn-padding-x !default;
 $drag-clue-padding-y: $btn-padding-y !default;
 $drag-clue-border-width: 1px !default;
-$drag-clue-border-radius: $border-radius !default;
+$drag-clue-border-radius: $kendo-border-radius-md !default;
 $drag-clue-font-size: $font-size !default;
 $drag-clue-font-family: $font-family !default;
 $drag-clue-line-height: $line-height !default;
