--- a/packages/bootstrap/scss/badge/_variables.scss
+++ b/packages/bootstrap/scss/badge/_variables.scss
@@ -9,14 +9,14 @@ $badge-line-height: 1 !default;
 $badge-padding-x-sm: ( $badge-padding-x / 2 ) !default;
 $badge-padding-y-sm: ( $badge-padding-y / 2 ) !default;
 $badge-border-width-sm: $badge-border-width !default;
-$badge-border-radius-sm: $border-radius-sm !default;
+$badge-border-radius-sm: $kendo-border-radius-sm !default;
 $badge-font-size-sm: ( $badge-font-size * .8333333333 ) !default;
 $badge-line-height-sm: 1 !default;
 
 $badge-padding-x-lg: ( $badge-padding-x * 1.5 ) !default;
 $badge-padding-y-lg: ( $badge-padding-y * 1.5 ) !default;
 $badge-border-width-lg: $badge-border-width !default;
-$badge-border-radius-lg: $border-radius-lg !default;
+$badge-border-radius-lg: $kendo-border-radius-lg !default;
 $badge-font-size-lg: ( $badge-font-size * 1.1666666666 ) !default;
 $badge-line-height-lg: 1.25 !default;
 
