--- a/packages/bootstrap/scss/colorgradient/_variables.scss
+++ b/packages/bootstrap/scss/colorgradient/_variables.scss
@@ -3,7 +3,7 @@ $colorgradient-spacer: map-get( $spacing, 4 ) !default;
 
 $colorgradient-width: 328px !default;
 $colorgradient-border-width: 1px !default;
-$colorgradient-border-radius: $border-radius !default;
+$colorgradient-border-radius: $kendo-border-radius-md !default;
 $colorgradient-padding-y: $colorgradient-spacer !default;
 $colorgradient-padding-x: $colorgradient-padding-y !default;
 $colorgradient-gap: $colorgradient-spacer !default;
@@ -17,7 +17,7 @@ $colorgradient-border: $component-border !default;
 $colorgradient-focus-border: $hovered-border !default;
 $colorgradient-focus-shadow: null !default;
 
-$colorgradient-canvas-border-radius: $border-radius !default;
+$colorgradient-canvas-border-radius: $kendo-border-radius-md !default;
 $colorgradient-canvas-gap: map-get( $spacing, 3 ) !default;
 $colorgradient-canvas-rectangle-height: 180px !default;
 
