--- a/packages/bootstrap/scss/menu/_layout.scss
+++ b/packages/bootstrap/scss/menu/_layout.scss
@@ -23,7 +23,7 @@
         }
 
         .k-context-menu {
-            @include border-radius( $border-radius );
+            @include border-radius( $kendo-border-radius-md );
         }
 
         .k-header {
