--- a/packages/bootstrap/scss/taskboard/_variables.scss
+++ b/packages/bootstrap/scss/taskboard/_variables.scss
@@ -26,7 +26,7 @@ $taskboard-columns-container-gap: $taskboard-spacer !default;
 
 $taskboard-column-width: 320px !default;
 $taskboard-column-border-width: 1px !default;
-$taskboard-column-border-radius: $border-radius-sm !default;
+$taskboard-column-border-radius: $kendo-border-radius-sm !default;
 $taskboard-column-bg: if( $dark-theme, $gray-900, $gray-100 ) !default;
 $taskboard-column-text: null !default;
 $taskboard-column-border: transparent !default;
