--- a/packages/classic/scss/tilelayout/_variables.scss
+++ b/packages/classic/scss/tilelayout/_variables.scss
@@ -4,7 +4,7 @@ $tilelayout-card-border-width: $card-border-width !default;
 $tilelayout-card-focus-shadow: $card-focus-shadow !default;
 
 $tilelayout-hint-border-width: 1px !default;
-$tilelayout-hint-border-radius: $border-radius-lg !default;
+$tilelayout-hint-border-radius: $kendo-border-radius-lg !default;
 
 $tilelayout-bg: $base-bg !default;
 
