--- a/packages/default/scss/_variables.scss
+++ b/packages/default/scss/_variables.scss
@@ -80,10 +80,10 @@ $padding-x-lg: $padding-x * 1.5 !default;
 $padding-y-lg: $padding-y * 1.5 !default;
 
 /// Border radius for all components.
-$border-radius: map-get( $spacing, 1 ) !default;
-$border-radius-sm: $border-radius - map-get( $spacing, thin ) !default;
-$border-radius-md: $border-radius !default;
-$border-radius-lg: $border-radius + map-get( $spacing, thin ) !default;
+$kendo-border-radius: map-get( $spacing, 1 ) !default;
+$kendo-border-radius-sm: $kendo-border-radius - map-get( $spacing, thin ) !default;
+$kendo-border-radius-md: $kendo-border-radius !default;
+$kendo-border-radius-lg: $kendo-border-radius + map-get( $spacing, thin ) !default;
 
 $panel-padding-x: $padding-x !default;
 $panel-padding-y: $padding-y !default;
@@ -365,7 +365,7 @@ $invalid-shadow: null !default;
 $drag-clue-padding-x: $padding-x !default;
 $drag-clue-padding-y: $padding-y !default;
 $drag-clue-border-width: 1px !default;
-$drag-clue-border-radius: $border-radius !default;
+$drag-clue-border-radius: $kendo-border-radius-md !default;
 $drag-clue-font-size: $font-size !default;
 $drag-clue-font-family: $font-family !default;
 $drag-clue-line-height: $line-height !default;
