--- a/packages/default/scss/popup/_theme.scss
+++ b/packages/default/scss/popup/_theme.scss
@@ -10,7 +10,7 @@
     }
 
     .k-animation-container {
-        @include border-bottom-radius-only( $border-radius );
+        @include border-bottom-radius-only( $kendo-border-radius );
     }
 
 }
