--- a/packages/default/scss/scheduler/_layout.scss
+++ b/packages/default/scss/scheduler/_layout.scss
@@ -393,7 +393,7 @@
     // Appointments
     kendo-scheduler .k-event,
     .k-event {
-        @include border-radius( $border-radius );
+        @include border-radius( $kendo-border-radius );
         min-height: $scheduler-event-min-height;
         box-sizing: border-box;
         border-width: 0;
