--- a/packages/default/scss/timeline/_layout.scss
+++ b/packages/default/scss/timeline/_layout.scss
@@ -32,7 +32,7 @@
             display: inline-block;
             text-align: center;
             padding: $timeline-flag-padding-y $timeline-flag-padding-x;
-            border-radius: $border-radius;
+            border-radius: $kendo-border-radius;
             line-height: $timeline-flag-line-height;
             min-width: $timeline-flag-min-width;
             max-width: $timeline-flag-max-width;
@@ -96,7 +96,7 @@
                 }
 
                 &::-webkit-scrollbar-thumb {
-                    border-radius: $border-radius;
+                    border-radius: $kendo-border-radius;
                 }
             }
         }
@@ -140,7 +140,7 @@
             height: 100%;
             width: $timeline-track-size;
             transform: translateX(-50%);
-            border-radius: $border-radius-lg;
+            border-radius: $kendo-border-radius-lg;
         }
 
         .k-timeline-flag-wrap {
