--- a/packages/default/scss/tooltip/_variables.scss
+++ b/packages/default/scss/tooltip/_variables.scss
@@ -3,7 +3,7 @@ $tooltip-padding-y: $padding-y !default;
 $tooltip-padding-x: $padding-x !default;
 $tooltip-max-width: null !default;
 $tooltip-border-width: 0px !default;
-$tooltip-border-radius: $border-radius !default;
+$tooltip-border-radius: $kendo-border-radius-md !default;
 
 $tooltip-font-family: $font-family !default;
 $tooltip-font-size: $font-size !default;
