--- a/packages/default/scss/utils/_border.scss
+++ b/packages/default/scss/utils/_border.scss
@@ -41,11 +41,11 @@
     ) !default;
 
     $utils-border-radius: (
-        default: $border-radius-md,
+        default: $kendo-border-radius-md,
         0: 0,
-        sm: $border-radius-sm,
-        md: $border-radius-md,
-        lg: $border-radius-lg,
+        sm: $kendo-border-radius-sm,
+        md: $kendo-border-radius-md,
+        lg: $kendo-border-radius-lg,
         full: 9999px
     ) !default;
 
