--- a/packages/material/scss/badge/_variables.scss
+++ b/packages/material/scss/badge/_variables.scss
@@ -2,21 +2,21 @@
 $badge-padding-x: $padding-y !default;
 $badge-padding-y: $badge-padding-x !default;
 $badge-border-width: 1px !default;
-$badge-border-radius: $border-radius !default;
+$badge-border-radius: $kendo-border-radius-md !default;
 $badge-font-size: $font-size-sm !default;
 $badge-line-height: 1 !default;
 
 $badge-padding-x-sm: ( $badge-padding-x / 2 ) !default;
 $badge-padding-y-sm: ( $badge-padding-y / 2 ) !default;
 $badge-border-width-sm: $badge-border-width !default;
-$badge-border-radius-sm: $border-radius-sm !default;
+$badge-border-radius-sm: $kendo-border-radius-sm !default;
 $badge-font-size-sm: $font-size-xs !default;
 $badge-line-height-sm: 1 !default;
 
 $badge-padding-x-lg: ( $badge-padding-x * 1.5 ) !default;
 $badge-padding-y-lg: ( $badge-padding-y * 1.5 ) !default;
 $badge-border-width-lg: $badge-border-width !default;
-$badge-border-radius-lg: $border-radius-lg !default;
+$badge-border-radius-lg: $kendo-border-radius-lg !default;
 $badge-font-size-lg: $font-size !default;
 $badge-line-height-lg: 1 !default;
 
