--- a/packages/material/scss/color-preview/_variables.scss
+++ b/packages/material/scss/color-preview/_variables.scss
@@ -1,5 +1,5 @@
 // Color Preview
-$color-preview-border-radius: $border-radius !default;
+$color-preview-border-radius: $kendo-border-radius-md !default;
 $color-preview-border-width: 1px !default;
 $color-preview-bg: null !default;
 $color-preview-text: null !default;
