--- a/packages/material/scss/spreadsheet/_variables.scss
+++ b/packages/material/scss/spreadsheet/_variables.scss
@@ -15,9 +15,9 @@ $spreadsheet-insert-image-dialog-preview-width: 355px !default;
 $spreadsheet-insert-image-dialog-preview-height: 230px !default;
 $spreadsheet-insert-image-dialog-preview-img: "image-default.png" !default;
 $spreadsheet-insert-image-dialog-preview-border: $component-border !default;
-$spreadsheet-insert-image-dialog-preview-border-radius: $border-radius !default;
+$spreadsheet-insert-image-dialog-preview-border-radius: $kendo-border-radius-md !default;
 $spreadsheet-insert-image-dialog-preview-overlay-shadow: inset 0 0 0 2000px rgba(0, 0, 0, .5) !default;
-$spreadsheet-insert-image-dialog-preview-overlay-border-radius: $border-radius !default;
+$spreadsheet-insert-image-dialog-preview-overlay-border-radius: $kendo-border-radius-md !default;
 $spreadsheet-insert-image-dialog-overlay-hovered-text: $component-bg !default;
 
 $spreadsheet-drawing-handle-width: 6px !default;
@@ -27,7 +27,7 @@ $spreadsheet-drawing-handle-border-width: 1px !default;
 $spreadsheet-drawing-handle-outline-color: $primary !default;
 $spreadsheet-drawing-handle-border-color: $primary !default;
 $spreadsheet-drawing-handle-bg: $primary !default;
-$spreadsheet-drawing-handle-border-radius: $border-radius-lg !default;
+$spreadsheet-drawing-handle-border-radius: $kendo-border-radius-lg !default;
 
 $spreadsheet-drawing-outline-style: solid !default;
 $spreadsheet-drawing-outline-width: 2px !default;
