--- a/packages/material/scss/taskboard/_variables.scss
+++ b/packages/material/scss/taskboard/_variables.scss
@@ -26,7 +26,7 @@ $taskboard-columns-container-gap: $taskboard-spacer !default;
 
 $taskboard-column-width: 320px !default;
 $taskboard-column-border-width: 1px !default;
-$taskboard-column-border-radius: $border-radius !default;
+$taskboard-column-border-radius: $kendo-border-radius-md !default;
 $taskboard-column-bg: if( $dark-theme, $dark, $light) !default;
 $taskboard-column-text: null !default;
 $taskboard-column-border: transparent !default;
